--- a/project/proposal.tex
+++ b/project/proposal.tex
@@ -29,18 +29,17 @@ It will be decided later when we know more about the available options.
 Our end goal is a bag predictor that can predict the Dow Jones performance with good accuracy.
 In addition we will apply decision theory to the probabilistic technique to evaluate whether hedging is beneficial under several gain/loss models.
 
-\section{Project Components}
-
+\section{Tasks}
+We propose to complete the following tasks.
 
 \subsection{Feature Selection}
 Feature selection for Naive Bayes is straight forward: each word is a feature.
 However, for the SVM and probabilistic models it is not obvious.
 Making each word a feature yields very high dimensionality with only two possible values in each dimension.
-
 We will therefore explore alternative features as well as dimensionality reduction techniques to yield a lower dimension space.
 
 \subsection{Implementations}
-
+We plan to implement each part of our project as opposed to using off the shelf software. We already have 
 
 \subsection{Experiments}
 
