--- a/project/report.bib
+++ b/project/report.bib
@@ -6,3 +6,22 @@
   year={2009},
   organization={ACM}
 }
+
+@article{twitter,
+  title={Twitter mood predicts the stock market},
+  author={Bollen, J. and Mao, H. and Zeng, X.},
+  journal={Journal of Computational Science},
+  volume={2},
+  number={1},
+  pages={1--8},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{mlstockmarket,
+  title={Machine Learning Techniques for Stock Prediction},
+  author={Shah, V.H.},
+  journal={Courant Institute of Mathematical Science, New York University},
+  year={2007},
+  note = "\url{http://www.vatsals.com/Essays/MachineLearningTechniquesforStockPrediction.pdf}"
+}
